# ias0220_course_exercises

./: CMakeLists.txt  package.xml
bags/: longerBag.bag  recorded.bag  rosbag_to_light.bag  shortBag.bag  slowerMotionsBag.bag
config/: bagfile.rviz  base_local_planner_params.yaml  config_path_planning.rviz  costmap_common_params.yaml  diffdrive.yaml  differential_robot_rviz.rviz  differential_robot_waypoints.rviz  simple_control_v2.yaml
launch/: bagfile_play_RViz.launch  bagfile_record.launch  differential_drive_global_localization_201400ivsm.launch  differential_drive_localization_201400ivsm.launch  differential_drive_nav_stack_task9.launch  differential_drive_slam_201400ivsm.launch  differential_robot_rosbag_steering.launch  differential_robot_sensors_steering.launch  differential_robot_simu.launch  differential_robot_task2.launch  gazebo.launch  to_the_light.launch
msg/: counter_message.msg
scripts/: encoders_node.py  odometry_node.py  serial_interface.py  simple_control_template.py  steering_node.py
urdf/: differential_robot_simu.urdf  differential_robot_task2.urdf  gazebo.urdf
worlds/: seethelight.world  test.world
